sass/conditionals/insights/related-to-idea-story.sass
@charset "UTF-8"

// IMPORT COMPASS AND EXTENSIONS
@import compass
@import breakpoint
@import ../../../fonts/icons/icons
@import partials/base/00-variables/all
@import partials/base/03-extend/gsb-revamp

// If related is empty, hide it
.hide_this
  display: none

// Related sidebar on idea story, announcement, school story, book, JABCO, working paper, Alumni Agenda reunion item, ACT project
.group-wrapper-related
  // custom box shadow because of divider issue
  @extend %bg-white
  +box-shadow(rgba($black, 0.1) 0 0 0, rgba($black, 0.1) 0 0 0 1px)
  border: none
  height: auto !important
  margin: 1px
  padding: 0

  // Toggle open and closed
  legend
    display: none
    padding: 0

  // Superhead
  .superhead
    @extend %black-border-top
    display: block
    font-family: $font-demi
    font-size: 18px
    line-height: 1.3
    margin: 0 26px
    padding: 12px 0 0

  // Related faculty, alumni, MSx, PhD, staff
  .field-name-field-person-fac-ref,
  .field-name-field-alumni-ref,
  .field-name-field-person-ref-unlimited,
  .field-name-field-related-faculty
    @extend %divider-bottom

  // Hide the border between people
  .field-name-field-person-ref-unlimited
    border-top: 1px $white solid
    margin-top: -1px

  // Related People
  .field-collection-item-field-related-faculty,
  .field-name-field-person-fac-ref,
  .field-name-field-alumni-ref,
  .field-name-field-person-ref-unlimited
    .node
      +clearfix
      padding: 7px $standard-padding

    // Image
    .field-name-field-image-single-public
      float: left
      margin-right: 12px
      max-width: 42px
      height: 60px

    // Name
    .group-wrapper-name,
    .field-name-title
      line-height: 0
      padding-left: 54px
      a
        font-family: $font-demi
        display: inline-block
        font-size: 16px
        line-height: 1.3
        max-width: 164px

    // Rank, academic area for faculty, stanford degree for alumni, title for msx, organization for msx
    .group-wrapper-position,
    .person-position,
    .field-name-field-stanford-degrees-single,
    .field-name-field-title-position-unlimited,
    .field-name-field-company-organization
      font-size: 16px
      line-height: 1.3
      padding-left: 54px

  // Alumni name and year fix.
  .field-name-field-person-ref-unlimited
    .field-degree
      display: block

  // Related Faculty and Alumni
  .field-name-field-person-fac-ref,
  .field-name-field-alumni-ref
    @extend %divider-bottom
    padding-bottom: $standard-padding

  .faculty-author-wrapper
    @extend %divider-bottom

  // Related Idea stories, offsite idea stories, school stories, offsite school stories,
  .field-name-field-related-idea-story
    padding: 0
    .view-mode-idea_story_related
      @extend %divider-bottom
      padding: 18px $standard-padding
      // Date
      .field-name-field-date
        font-size: 14px
        line-height: 1.2
        margin-bottom: 14px

      // Media icons

      // Video
      .media-icon.Video
        margin-right: 5px
        top: 0
        +icon-after("video", true)
        &:after
          color: #bcbcbc
          font-size: 20px

      // Audio
      .media-icon.Audio
        margin-right: 5px
        top: 0
        +icon-after("podcast", true)
        &:after
          color: #bcbcbc
          font-size: 20px

      // Infographic
      .media-icon.Infographic
        margin-right: 5px
        &:after
          content: "Infographic:"
          font-size: 20px
          font-weight: bold

      // Title
      .field-name-title
        display: inline
      h2
        display: inline
        font-family: $font-sans
        font-size: 20px
        font-weight: bold
        line-height: 0
        margin-bottom: 12px
        a
          line-height: 1.3
          &[target=_blank]
            &:after
              font-size: 10px

      // Dek
      .field-name-field-editorial-summary
        font-size: 16px
        line-height: 1.3
        margin-bottom: 0
        margin-top: 8px

  // Related other content
  .field-collection-item-field-related-other-unlimited
    @extend %divider-bottom
    padding: 18px $standard-padding

    // Title wrapper
    .group-wrapper-title
      line-height: 0
      margin-bottom: 8px
      h3
        display: inline
        font-family: $font-demi
        font-size: 16px
        font-weight: normal
        line-height: 0
        // Title
        .field-name-field-title
          line-height: 1.3

    // Label
    .field-name-field-related-other-label
      font-family: $font-demi
      font-size: 16px
      line-height: 1.3

    // Authors
    .field-name-field-author,
    .field-name-field-authors
      font-size: 14px
      line-height: 1.3
      margin-left: 0
    .gsb_field_formatter_field_collection_separator .field
      display: inline-block
    .field-collection-item-field-authors
      &:last-of-type
        &:before
          content: none

    // Date and location
    .field-name-field-event-date,
    .field-name-field-event-location-type,
    .field-name-field-address
      font-size: 14px
      line-height: 1.3

    .field-name-field-event-date
      font-family: $font-demi

  // Related programs
  .field-name-field-related-programs
    // Title wrapper
    .group-wrapper-title
      line-height: 0
      margin-bottom: 8px
      h3
        display: inline
        font-family: $font-demi
        font-size: 16px
        font-weight: normal
        line-height: 0
        a
          line-height: 1.3
          &[target=_blank]
            &:after
              font-size: 10px

    // Label
    .field-name-field-program-category
      font-family: $font-demi
      font-size: 16px
      line-height: 1.3
      div
        display: inline

    // Teaser
    .field-name-field-overview-teaser
      font-size: 16px
      line-height: 1.3
      margin-bottom: 0
      margin-top: 8px

  // Related links and files
  .field-name-field-link-unlimited,
  .field-name-field-link-related-unlimited,
  .field-name-field-file-unlimited-public
    @extend %divider-bottom
    padding: 18px $standard-padding
    div
      line-height: 0
      margin-bottom: 10px
      &:last-of-type
        margin-bottom: 0
    a
      font-family: $font-demi
      font-size: 16px
      line-height: 1.3
      word-break: break-word
      &[target=_blank]
        &:after
          font-size: 10px

// Related Faculty twitter handle
.field-name-field-twitter-handle
  display: inline-block

  .twitter-handle-text
    color: $link-green
    display: inherit
    padding-top: 3px
    word-break: break-word
    +icon-before("twitter", true)
      color: $twitter
      display: inline
      margin-right: 3px
    +icon-after("arrow-external", true)
      font-size: 0.7em
      margin-left: 3px
  + .separator
    display: none

.field-collection-item-field-related-faculty
  .person-area + .separator
    display: none

// Related Faculty blog should not be displayed
.field-name-field-link-blog
  display: none

.person-subname
  float: left
  width: 160px
  overflow: hidden


//faculty name and position alignment fixes
.group-wrapper-related .field-collection-item-field-related-faculty .field-name-title,
.group-wrapper-related .field-collection-item-field-related-faculty .person-position,
.group-wrapper-related .faculty-author-wrapper .field-name-title,
.group-wrapper-related .faculty-author-wrapper .person-position,
.group-wrapper-related .field-name-field-person-ref-unlimited .person-position,
.group-wrapper-related .field-collection-item-field-related-faculty .person-position .person-area,
.group-wrapper-related .faculty-author-wrapper .person-position .person-area,
.group-wrapper-related .field-name-field-person-ref-unlimited .field-name-title
  padding-left: 0px

.group-wrapper-related .field-name-field-person-ref-unlimited .person-position .field-collection-item-field-staff-item .field-name-field-department-office
  padding-left: 54px

.field-name-field-related-faculty .node-faculty .person-position, .field-name-field-related-faculty .node-faculty .person-name
  width: 160px
  float: left
  
.field-name-field-related-faculty .node-faculty span.person-position 
  width: auto !important

.faculty-author-wrapper .node-faculty .person-position, .faculty-author-wrapper .node-faculty .person-name
  width: 160px
  float: left

.faculty-author-wrapper .node-faculty span.person-position
  width: auto !important

